    set a mark on a set of groups in a single operation and transaction. 
    emaj_start_groups, emaj_stop_groups and emaj_set_mark_groups take as 
    first argument an array of group names.
  - in emaj_estime_rollback_duration(), check that the group is in LOGGING
    state.
  - in emaj_create_group(), explicitely check that no table or sequence 
    already belong to another created group.
  - in emaj_hist table, add a column containing the id of the insertion 
    transaction. 
  - a new emaj_find_previous_mark_group() function returns the name of the 
    mark that immediately precedes a given date and time for a group.
  - a comment has been added to all E-Maj tables, types and roles, as well 
    as to all functions callable by users.

Bug fixes:
  - during emaj_start_group() avoid double lock of tables and reoder events
    in the emaj_hist table.
  - in emaj_verify_all() function, add a check on orphan truncate functions.
  - a missing check has been added in internal _verify_group() function.

0.9.1
-----
Enhancements:
  - emaj_snap_group(): avoid setting explicit locks on tables because it is 
    not necessary to get a coherent image of all tables of the group.
  - the emaj_log_stat_group() function has been refactored. A new internal 
    _log_stat_table() function has been created.
  - the group_creation_datetime column of the emaj_group table is now 
    initialized with the transaction timestamp instead of the clock timestamp.
  - main functions set a lock on the emaj_group row representing the working 
    group to prevent simultaneous execution of these functions.
  - in emaj_start_group() and emaj_set_mark_group() functions, a mark name may 
    contain '%' wild characters. They are automatically replaced by a sequence 
    of digits from the current time.
  - while locking tables of a group, if a deadlock occurs, the locking 
    operation is cancelled and retried up to 5 times before the transaction 